# trustauthority-client-for-c

./: .gitignore  CMakeLists.txt  CODEOWNERS  Makefile  README.md
.github/workflows/: buildOnPush.yml  onmergerelease.yml  onpullrequest.yml
docker/: Dockerfile.ubuntu_20  Dockerfile.ubuntu_24
docs/: build_ut_tests.md  builds.md
examples/: CMakeLists.txt
examples/azure_tpm_token/: CMakeLists.txt  Dockerfile  README.md  azure_tpm_token.c
examples/nvgpu_token/: CMakeLists.txt  Dockerfile  README.md  nvgpu_token.c
examples/sevsnp_token/: CMakeLists.txt  Dockerfile  README.md  sevsnp_token.c
examples/sgx_enclave/: Readme.md  app.h  enclave.signed.info  usgx_attest.h
examples/sgx_token/: CMakeLists.txt  Dockerfile  README.md  Readme.md  enclave.c  run.sh  sgx_token.c
examples/tdx_token/: CMakeLists.txt  Dockerfile  README.md  Readme.md  run.sh  tdx_token.c
include/: amber-api.h  amber-sgx.h  amber-tdx.h  amber-token-provider.h  amber-token-verifier.h  amber-types.h  connector.h  evidence_builder.h  log.h  nvgpu_adapter.h  sevsnp_adapter.h  sgx_adapter.h  tdx_adapter.h  token_provider.h  token_verifier.h  tpm_adapter.h  types.h
minimal-enclave/: Enclave.edl  Makefile
src/: CMakeLists.txt
src/amber_api/: CMakeLists.txt  api.c  appraisal_request.h  base64.c  base64.h  json.c  json.h  rest.c  rest.h
src/amber_sgx/: CMakeLists.txt  sgx_adapter.c
src/amber_tdx/: CMakeLists.txt  tdx_adapter.c
src/amber_token_provider/: CMakeLists.txt  token_provider.c
src/amber_token_verifier/: CMakeLists.txt  token_verifier.c
src/configfs_tsm/: CMakeLists.txt  report.c  report.h
src/connector/: CMakeLists.txt  api.h  appraisal_request.c  appraisal_request.h  base64.c  connector.c  json.c  json.h  rest.c  rest.h
src/evidence_builder/: CMakeLists.txt  evidence_builder.c
src/log/: log.c  log.h
src/nvgpu/: CMakeLists.txt  README.md  nvgpu_adapter.c
src/sevsnp/: CMakeLists.txt
src/sevsnp/azure/: CMakeLists.txt  azure_sevsnp_adapter.c
src/sevsnp/gcp/: CMakeLists.txt  sevsnp_adapter.c
src/sgx/: CMakeLists.txt  README.md  sgx_adapter.c
src/tdx/: CMakeLists.txt  README.md  tdx_adapter.c
src/tdx/azure/: CMakeLists.txt  README-AMD.md  README.md  azure_tdx_adapter.c  main.c
src/tdx/intel/: CMakeLists.txt  README.md  tdx_adapter.c
src/token_provider/: CMakeLists.txt  token_provider.c
src/token_verifier/: CMakeLists.txt  token_verifier.c  util.c  util.h
src/tpm/: CMakeLists.txt  tpm_adapter.c  tpm_util.c
src/util/: base64.c  base64.h  cleanup.c  json.c  json.h
tests/: CMakeLists.txt  base64_test.cpp  connector_test.cpp  json_test.cpp  mock_server.cpp  mock_server.h  report_test.cpp  rest_test.cpp  sgx_adapter_test.cpp  tdx_adapter_test.cpp  token_provider_mock_test.h  token_provider_test.cpp  token_verifier_test.cpp  util_test.cpp
tests/mock_sgx_dcap/: mock_sgx.c
tests/mock_sgx_dcap/include/: sgx_dcap_ql_wrapper.h  sgx_ql_lib_common.h  sgx_report.h  sgx_urts.h  tdx_attest.h
tests/resources/: ats-ca-crl.der  root-ca-crl.der
